# Assignment3

./: .gitignore  1_Login_Page.py  DbUtilTest.py  Dockerfile  README.md  SEVIRDataFetcherTest.py  TestS3Util.py  api_test_example.txt  apis.py  apis_test.py  aws_logging.py  cliapi.py  docker-compose.yml  index.html  requirements.txt  schemas.py
Authentication/: auth.py
Util/: DbUtil.py  S3Util.py
airflow/: docker-compose.yaml
airflow/dags/: airflow_geos18.sql  airflow_nexrad.sql  airflow_nexradmap.sql  airflow_users.sql  scrape_airflow.py
data/: nexrad-stations.csv  nexrad_classsheet.xlsx
fastapi_docker/: Dockerfile
great_expectations/: great_expectations.yml
great_expectations/expectations/: geos_metadata_suite.json  nexrad_metadata_suite.json
great_expectations/uncommitted/: edit_checkpoint_geos_metadata_checkpoint.ipynb  edit_checkpoint_nexrad_metadata_checkpoint.ipynb  edit_geos_metadata_suite.ipynb  edit_nexrad_metadata_suite.ipynb
great_expectations/uncommitted/.ipynb_checkpoints/: datasource_new-checkpoint.ipynb  edit_geos_metadata_suite-checkpoint.ipynb  edit_nexrad_metadata_suite-checkpoint.ipynb
great_expectations/uncommitted/data_docs/local_site/: index.html
great_expectations/uncommitted/data_docs/local_site/expectations/: geos_metadata_suite.html  (+1 more)
pages/: 2_SEVIRDataFetcher.py  3_NexRadRadarStations.py  4_RegisterPage.py  5_SubscriptionPage.py  6_Admin_Dashboard.py
typerpackage/: pyproject.toml  setup.py
typerpackage/testWheel/: test.py
typerpackage/testWheel.egg-info/: PKG-INFO  SOURCES.txt
typerpackage/typerpackage/: main.py
